@@ -1,4 +1,5 @@
 SUBDIRS = lib share etc bin
+ACLOCAL_AMFLAGS = -I .
 
 MAINTAINERCLEANFILES = ChangeLog Makefile.in aclocal.m4 configure compile config.* ltmain.sh
 DISTCLEANFILES = 
