@@ -130,3 +130,11 @@ Fri Mar 25 17:45:06 2011                        Michael Jennings (mej)
 
 Object::get() in an array context now returns an empty array.
 ----------------------------------------------------------------------
+Fri Jun  3 11:57:48 2011                        Michael Jennings (mej)
+
+We don't compile anything, so don't use libtool or autoheader.
+
+Clean up wwconfig.
+
+Add support for --datarootdir to silence warnings from configure.
+----------------------------------------------------------------------
